tests/NormalTests/paczka2/big_fuzzy/61035820.err
Error in line 2: 0fdpB S278 51,0
Error in line 5: tM8Jr8yMe S643 39,0
Error in line 29: sIY S136 68,46
Error in line 38: s3VW S643 43,4
Error in line 28: sIY S278 83,6
Error in line 47: sIY S136 111,1
Error in line 58: sIY S761 11,7
Error in line 77: sIYS64387,2
Error in line 65: S761 S761 26,9
Error in line 63: sIY S643 25,9
Error in line 79: S761 S136 94,2
Error in line 89: S761 S278 0,7
Error in line 102: S761 S761 70,8
Error in line 104: S761 S643 72,3
Error in line 111: S761 S761 64,0
Error in line 93: XQfdoNeX S278 5,8
Error in line 82: tM8Jr8yMe S643 303,9
Error in line 126: tM8Jr8yMe S278 18,5
Error in line 120: S761 S643 29,0
Error in line 133: LDN S278 28,4
Error in line 145: LDN S761 25,6
Error in line 137: S761 S136 52,6
Error in line 144: tM8Jr8yMe S136 19,5
Error in line 151: 0fdpB S278 24,2
Error in line 161: 0fdpB S761 47,3
Error in line 167: 0fdpB S278 69,3
Error in line 180: 0fdpB S136 37,9
Error in line 194: S761 S643 -1,3
Error in line 184: s3VW S643 90,0
Error in line 193: XQfdoNeX S643 41,7
Error in line 200: sIY S643 55,2
Error in line 198: s3VW S136 83,1
Error in line 196: tM8Jr8yMe S278 72,2
Error in line 207: 0fdpB S761 42,1
Error in line 209: tM8Jr8yMe S136 35,4
Error in line 218: 0fdpB S136 -3,7
Error in line 216: tM8Jr8yMe S761 38,4
Error in line 191: S761 S643 34,3
Error in line 225: XQfdoNeX S278 10,7
Error in line 220: tM8Jr8yMe S278 49,0
Error in line 214: 0fdpB S136 76,4
Error in line 221: s3VW S136 43,4
